# wildtoken

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
config/: default.toml
src/: app.rs  config.rs  error.rs  main.rs  state.rs  tray.rs
src/db/: log.rs  log_stats.rs  mod.rs  settings.rs  token.rs  upstream.rs
src/handlers/: admin.rs  proxy.rs
src/handlers/admin/: upstreams.rs
src/middleware/: auth.rs
src/models/: mod.rs  request_log.rs  settings.rs  token.rs  upstream.rs
src/proxy/: client.rs  logging.rs  matcher.rs  mod.rs
src/proxy/client/: headers.rs  sse.rs  tests.rs
src/state/: tests.rs
static/: admin.html  admin.js  styles.css
static/css/: animal-island.css  base.css  crt.css  cyberpunk.css  dashboard.css  enhancements.css  forms-dialogs.css  light-theme.css  logs-tokens.css  minecraft.css  nes.css  responsive.css  settings.css  tables.css  win95.css
static/js/: bootstrap.js  dashboard.js  events.js  logs.js  models.js  shell.js  tokens.js  upstreams.js
