[package]
name = "wildtoken"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8.9"
tokio = { version = "1.52", features = ["full"] }
tokio-stream = "0.1.18"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (SQLite via sqlx)
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "json", "chrono"] }
sqlx-core = "0.8.6"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2", "system-proxy"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"
argon2 = { version = "=0.5.3", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"

# Base64 (for body snapshots)
base64 = "0.22"

# Content encoding (gzip/deflate)
flate2 = "1"

# Async utilities
futures = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-test = "0.4"
